--- a/.gitignore
+++ b/.gitignore
@@ -1,57 +1,29 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
 
-# Blender specific
+# Blender
 *.blend1
 *.blend2
-*.blend@
 
-# IDE / Editor
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
+
+# OS
 .DS_Store
+Thumbs.db
 
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
+# Build
+build/
+dist/
 
-# Temporary files
-*.tmp
-*.log
-/tmp/
-
-# Documentation build
-docs/_build/
-
-# Environment
-.env
-venv/
-env/
-ENV/
+# Keep the DOCS and archive directories
+!DOCS/
+!archive/
